...
    var body: some View {
        NavigationStack {
            Form {
                Section {
                    TextField("What is it?", text: $title)
                        .accessibilityIdentifier("itineraryTitle")
                    TextField("Where? (optional)", text: $location)
                }

                Section {
                    Toggle("At a particular time", isOn: $hasTime)
                    if hasTime {
                        if let dayRange {
...
